--- a/release-notes/4.7.23.md
+++ b/release-notes/4.7.23.md
@@ -1,6 +1,6 @@
 # CiviCRM 4.7.23
 
-Released August 2, 2017;
+Released August 2, 2017
 
 - **[Features](#features)**
 - **[Bugs resolved](#bugs)**
@@ -10,7 +10,7 @@ Released August 2, 2017;
 | Does this version                                               |         |
 |:--------------------------------------------------------------- |:-------:|
 | fix security vulnerabilities?                                   | no      |
-| change the database schema?                                     | no      |
+| **change the database schema?**                                 | **yes** |
 | **alter the API?**                                              | **yes** |
 | **require attention to configuration options?**                 | **yes** |
 | **fix problems installing or upgrading to a previous version?** | **yes** |
@@ -115,6 +115,13 @@ Released August 2, 2017;
 
 ### CiviCase
 
+- **[CRM-19778](https://issues.civicrm.org/jira/browse/CRM-19778) Allowed
+  statuses per case-type
+  ([10552](https://github.com/civicrm/civicrm-core/pull/10552))**
+
+  The available options in the API for case status can now be filtered to those
+  appropriate for a given case type.
+
 - **[CRM-20794](https://issues.civicrm.org/jira/browse/CRM-20794) Colors for
   case status ([10586](https://github.com/civicrm/civicrm-core/pull/10586))
   (preliminary work)**
@@ -169,6 +176,11 @@ Released August 2, 2017;
 
   The backend add membership form now has a link to the backend credit card
   membership form.
+
+### Backdrop Integration
+
+- **Port of civicrm_engage to Backdrop
+  ([28](https://github.com/civicrm/civicrm-backdrop/pull/28))**
 
 ### Drupal Integration
 
@@ -225,121 +237,86 @@ Released August 2, 2017;
   contacts with deceased_date not setting is_deceased
   ([10742](https://github.com/civicrm/civicrm-core/pull/10742))**
 
-- **[CRM-20848](https://issues.civicrm.org/jira/browse/CRM-20848) Upgrade to 4.7.19 sets price_field to inactive if default Financial Types are disabled ([10675](https://github.com/civicrm/civicrm-core/pull/10675))**
+- **[CRM-20871](https://issues.civicrm.org/jira/browse/CRM-20871) crmUiSelect
+  fails to update when model changes
+  ([10659](https://github.com/civicrm/civicrm-core/pull/10659))**
 
-- **Clear all Messages when running clearMessages by default ([10669](https://github.com/civicrm/civicrm-core/pull/10669))**
+- **[CRM-20809](https://issues.civicrm.org/jira/browse/CRM-20809) Move
+  extensions cache from $extensionsDir to $uploadDir
+  ([10604](https://github.com/civicrm/civicrm-core/pull/10604))**
 
-- **[CRM-20857](https://issues.civicrm.org/jira/browse/CRM-20857) Deferred Revenue report -  DB Error: unknown error ([10646](https://github.com/civicrm/civicrm-core/pull/10646))**
+  Cached data about extensions was stored in the extensions directory, which may
+  not be an appropriate place and may not be writable.  It is now stored in the
+  upload directory.
 
-- **[CRM-20871](https://issues.civicrm.org/jira/browse/CRM-20871) crmUiSelect fails to update when model changes ([10659](https://github.com/civicrm/civicrm-core/pull/10659))**
+- **[CRM-20828](https://issues.civicrm.org/jira/browse/CRM-20828) Saved field
+  mappings drop down is limited to 1
+  ([10615](https://github.com/civicrm/civicrm-core/pull/10615))**
 
-- **[CRM-20867](https://issues.civicrm.org/jira/browse/CRM-20867) Class not found ([10656](https://github.com/civicrm/civicrm-core/pull/10656))**
+- **[CRM-20509](https://issues.civicrm.org/jira/browse/CRM-20509) Checking
+  Contribution Note field in reports results in no rows
+  ([10631](https://github.com/civicrm/civicrm-core/pull/10631))**
 
-- **Add release notes for 4.7.22 ([10645](https://github.com/civicrm/civicrm-core/pull/10645))**
+  When displaying note fields in reports, the query would limit the results to
+  rows that had notes.
 
-- **[CRM-20850](https://issues.civicrm.org/jira/browse/CRM-20850) Replace fatal with statusBounce in membership form ([10638](https://github.com/civicrm/civicrm-core/pull/10638))**
+- **[CRM-20351](https://issues.civicrm.org/jira/browse/CRM-20351)
+  hook_civicrm_buildForm invoked twice on a bunch of forms
+  ([10068](https://github.com/civicrm/civicrm-core/pull/10068))**
 
-- **[CRM-20809](https://issues.civicrm.org/jira/browse/CRM-20809) Move extensions cache from $extensionsDir to $uploadDir ([10604](https://github.com/civicrm/civicrm-core/pull/10604))**
+- **[CRM-20774](https://issues.civicrm.org/jira/browse/CRM-20774) Add check for
+  existing index keys(different values) while creating missing indices.
+  ([10572](https://github.com/civicrm/civicrm-core/pull/10572) and
+  [10566](https://github.com/civicrm/civicrm-core/pull/10566))**
 
-- **[CRM-20649](https://issues.civicrm.org/jira/browse/CRM-20649) Notice error when creating Price set ([10431](https://github.com/civicrm/civicrm-core/pull/10431))**
+  The check and resolution for missing indexes would previously be unaware of
+  variations in the keys for equivalent indexes.
 
-- **[CRM-20667](https://issues.civicrm.org/jira/browse/CRM-20667) Additonal Line item created from Membership backoffice form ([10450](https://github.com/civicrm/civicrm-core/pull/10450))**
+- **[CRM-20722](https://issues.civicrm.org/jira/browse/CRM-20722) 'Lock wait
+  timeout exceeded' error triggered on smart group cache rebuild
+  ([10498](https://github.com/civicrm/civicrm-core/pull/10498))**
 
-- **[CRM-20834](https://issues.civicrm.org/jira/browse/CRM-20834) Drupal user not created via Profile due to missing email field ([10629](https://github.com/civicrm/civicrm-core/pull/10629))**
+  This avoids an error when rebuilding the smart group cache on sites that have
+  a very large number of smart groups.
 
-- **[CRM-20828](https://issues.civicrm.org/jira/browse/CRM-20828) Saved field mappings drop down is limited to 1 ([10615](https://github.com/civicrm/civicrm-core/pull/10615))**
+- **[CRM-20443](https://issues.civicrm.org/jira/browse/CRM-20443) SQL syntax
+  error creating logging triggers if column name is reserved word
+  ([10530](https://github.com/civicrm/civicrm-core/pull/10530))**
 
-- **[CRM-20805](https://issues.civicrm.org/jira/browse/CRM-20805) Fatal Error when adding new membership type on a contribution page. ([10597](https://github.com/civicrm/civicrm-core/pull/10597))**
+- **[CRM-20950](https://issues.civicrm.org/jira/browse/CRM-20950) Contact import
+  mapping to wrong location type (unreleased regression)
+  ([10736](https://github.com/civicrm/civicrm-core/pull/10736) and
+  [10735](https://github.com/civicrm/civicrm-core/pull/10735))**
 
-- **[CRM-20509](https://issues.civicrm.org/jira/browse/CRM-20509) Checking Contribution Note field in reports results in no rows ([10631](https://github.com/civicrm/civicrm-core/pull/10631))**
+- **[CRM-20754](https://issues.civicrm.org/jira/browse/CRM-20754) memory leak in
+  CLI CSV import ([10537](https://github.com/civicrm/civicrm-core/pull/10537))**
 
-- **[CRM-20351](https://issues.civicrm.org/jira/browse/CRM-20351) hook_civicrm_buildForm invoked twice on a bunch of forms ([10068](https://github.com/civicrm/civicrm-core/pull/10068))**
+  This resolves a problem of accumulating too much data in the
+  `PEAR_DB_DATAOBJECT` cache on large imports.
 
-- **Rename v4.7.22 to v4.7.23 ([10624](https://github.com/civicrm/civicrm-core/pull/10624))**
+- **[CRM-19702](https://issues.civicrm.org/jira/browse/CRM-19702) Fatal error
+  when merging contact records with custom file fields
+  ([9784](https://github.com/civicrm/civicrm-core/pull/9784))**
 
-- **Release notes: Mathieu primary affiliation still Coop SymbioTIC ([10621](https://github.com/civicrm/civicrm-core/pull/10621))**
+- **[CRM-19653](https://issues.civicrm.org/jira/browse/CRM-19653) Custom field
+  checkboxes migrated incorrectly on merge (part deux)
+  ([10407](https://github.com/civicrm/civicrm-core/pull/10407))**
 
-- **Misspelling ([10619](https://github.com/civicrm/civicrm-core/pull/10619))**
+- **[CRM-19821](https://issues.civicrm.org/jira/browse/CRM-19821) Remove
+  performance degrading joins from activity search (& api calls)
+  ([10274](https://github.com/civicrm/civicrm-core/pull/10274))**
 
-- **[CRM-20823](https://issues.civicrm.org/jira/browse/CRM-20823) Price Set field with an Expiry Date still being 'required' after being expired. ([10613](https://github.com/civicrm/civicrm-core/pull/10613))**
+- **[CRM-20743](https://issues.civicrm.org/jira/browse/CRM-20743) users without
+  reserved tag permission may still modify the tag
+  ([10522](https://github.com/civicrm/civicrm-core/pull/10522))**
 
-- **[CRM-20752](https://issues.civicrm.org/jira/browse/CRM-20752) Editing a Cancelled Pledge updates the status of it to Pending/Inprogress ([10535](https://github.com/civicrm/civicrm-core/pull/10535))**
+  While users lacking the "Administer reserved tags" permission were barred from
+  deleting or moving reserved tags, this prevents them from editing the tag name
+  and description.
 
-- **4.7.21 rc ([10616](https://github.com/civicrm/civicrm-core/pull/10616))**
-
-- **[CRM-20633](https://issues.civicrm.org/jira/browse/CRM-20633) custom field set displayed twice on register event Participant ([10551](https://github.com/civicrm/civicrm-core/pull/10551))**
-
-- **[CRM-20797](https://issues.civicrm.org/jira/browse/CRM-20797) Use is_payment to retrieve payments ([10587](https://github.com/civicrm/civicrm-core/pull/10587))**
-
-- **[CRM-20812](https://issues.civicrm.org/jira/browse/CRM-20812) Notice on live contribution when only pay later is selected ([10606](https://github.com/civicrm/civicrm-core/pull/10606))**
-
-- **4.7.21 rc ([10600](https://github.com/civicrm/civicrm-core/pull/10600))**
-
-- **4.7.21 rc ([10593](https://github.com/civicrm/civicrm-core/pull/10593))**
-
-- **Replace a couple of calls to deprecated function ([10527](https://github.com/civicrm/civicrm-core/pull/10527))**
-
-- **[CRM-19914](https://issues.civicrm.org/jira/browse/CRM-19914) civicrmHooks.php issues on windows ([10571](https://github.com/civicrm/civicrm-core/pull/10571))**
-
-- **[CRM-20774](https://issues.civicrm.org/jira/browse/CRM-20774) Add check for existing index keys(different values) while creating missing indices. ([10572](https://github.com/civicrm/civicrm-core/pull/10572) and [10566](https://github.com/civicrm/civicrm-core/pull/10566))**
-
-- **[CRM-19778](https://issues.civicrm.org/jira/browse/CRM-19778) Allowed statuses per case-type ([10552](https://github.com/civicrm/civicrm-core/pull/10552))**
-
-- **Update `master` with latest `4.7.21-rc` ([10570](https://github.com/civicrm/civicrm-core/pull/10570))**
-
-- **[CRM-20668](https://issues.civicrm.org/jira/browse/CRM-20668) Notice error ([10452](https://github.com/civicrm/civicrm-core/pull/10452))**
-
-- **4.7.21 rc ([10560](https://github.com/civicrm/civicrm-core/pull/10560))**
-
-- **4.7.21 rc ([10559](https://github.com/civicrm/civicrm-core/pull/10559))**
-
-- **[CRM-20722](https://issues.civicrm.org/jira/browse/CRM-20722) 'Lock wait timeout exceeded' error triggered on smart group cache rebuild ([10498](https://github.com/civicrm/civicrm-core/pull/10498))**
-
-- **[CRM-20761](https://issues.civicrm.org/jira/browse/CRM-20761) Formrule error when priceset is selected on contribution page ([10549](https://github.com/civicrm/civicrm-core/pull/10549))**
-
-- **[CRM-20758](https://issues.civicrm.org/jira/browse/CRM-20758) Fix deprecated fn call on import screen ([10544](https://github.com/civicrm/civicrm-core/pull/10544))**
-
-- **[CRM-20746](https://issues.civicrm.org/jira/browse/CRM-20746) CiviMail - text part of resubscribe confirmation mail contains html ([10528](https://github.com/civicrm/civicrm-core/pull/10528))**
-
-- **[CRM-20401](https://issues.civicrm.org/jira/browse/CRM-20401) Cancel/modify URL receipt links not correct for Paypal Website Payments Pro ([10424](https://github.com/civicrm/civicrm-core/pull/10424))**
-
-- **[CRM-20443](https://issues.civicrm.org/jira/browse/CRM-20443) SQL syntax error creating logging triggers if column name is reserved word ([10530](https://github.com/civicrm/civicrm-core/pull/10530))**
-
-- **[CRM-20745](https://issues.civicrm.org/jira/browse/CRM-20745) Post date of recur not respected in credit card pledge payment ([10524](https://github.com/civicrm/civicrm-core/pull/10524))**
-
-- **[CRM-20675](https://issues.civicrm.org/jira/browse/CRM-20675) Membership status update creates renewal activity ([10457](https://github.com/civicrm/civicrm-core/pull/10457))**
-
-- **4.7.21 rc ([10526](https://github.com/civicrm/civicrm-core/pull/10526))**
-
-- **[CRM-20541](https://issues.civicrm.org/jira/browse/CRM-20541) Edge case where DB connection is not available ([447](https://github.com/civicrm/civicrm-drupal/pull/447))**
-
-- **Fix spelling to canvass for civicrm_engage ([40](https://github.com/civicrm/civicrm-backdrop/pull/40))**
-
-- **Bug fixes - issues #22, #31, #33 ([39](https://github.com/civicrm/civicrm-backdrop/pull/39))**
-
-- **Improve Views checkbox value handling ([37](https://github.com/civicrm/civicrm-backdrop/pull/37))**
-
-- **add new views handlers to hook_autoload_info ([38](https://github.com/civicrm/civicrm-backdrop/pull/38))**
-
-- **Merge in civicrm/drupal from Dec 15, 2015 to June 21, 2017 ([36](https://github.com/civicrm/civicrm-backdrop/pull/36))**
-
-- **Port of civicrm_engage to Backdrop ([28](https://github.com/civicrm/civicrm-backdrop/pull/28))**
-
-### Import
-
-- **[CRM-20950](https://issues.civicrm.org/jira/browse/CRM-20950) Contact import mapping to wrong location type (unreleased regression) ([10736](https://github.com/civicrm/civicrm-core/pull/10736) and [10735](https://github.com/civicrm/civicrm-core/pull/10735))**
-
-### CiviContribute, CiviMail, CiviMember, WordPress Integration
-
-- **[CRM-19017](https://issues.civicrm.org/jira/browse/CRM-19017) Scheduled membership reminders have stopped working ([10652](https://github.com/civicrm/civicrm-core/pull/10652))**
-
-### CiviCRM API
-
-- **[CRM-20754](https://issues.civicrm.org/jira/browse/CRM-20754) memory leak in CLI CSV import ([10537](https://github.com/civicrm/civicrm-core/pull/10537))**
-
-### Dedupe
-
-- **[CRM-19702](https://issues.civicrm.org/jira/browse/CRM-19702) Fatal error when merging contact records with custom file fields ([9784](https://github.com/civicrm/civicrm-core/pull/9784))**
+- **[CRM-20621](https://issues.civicrm.org/jira/browse/CRM-20621) manage tags:
+  the tag usage count is not accurate
+  ([10441](https://github.com/civicrm/civicrm-core/pull/10441))**
 
 ### CiviCase
 
@@ -369,31 +346,94 @@ Released August 2, 2017;
   Using a contribution page with "separate membership payment" set, a pay-later
   contribution would incorrectly mark the membership contribution completed.
 
-- **[CRM-20773](https://issues.civicrm.org/jira/browse/CRM-20773) Contribution tab shows Receive Date twice instead of Thank You date ([10607](https://github.com/civicrm/civicrm-core/pull/10607))**
+- **[CRM-20848](https://issues.civicrm.org/jira/browse/CRM-20848) Upgrade to
+  4.7.19 sets price_field to inactive if default Financial Types are disabled
+  ([10675](https://github.com/civicrm/civicrm-core/pull/10675))**
 
-- **[CRM-20387](https://issues.civicrm.org/jira/browse/CRM-20387) Sales Tax and Invoicing code overwrites existing CiviCRM invoice ID ([10298](https://github.com/civicrm/civicrm-core/pull/10298))**
+- **[CRM-20857](https://issues.civicrm.org/jira/browse/CRM-20857) Deferred
+  Revenue report -  DB Error: unknown error
+  ([10646](https://github.com/civicrm/civicrm-core/pull/10646))**
 
-- **[CRM-20488](https://issues.civicrm.org/jira/browse/CRM-20488) Lift restrictions for contact type soft credit ([10532](https://github.com/civicrm/civicrm-core/pull/10532) and [10419](https://github.com/civicrm/civicrm-core/pull/10419))**
+  The Deferred Revenue report would have an error on if a database server's
+  `sql_mode` was set to `only_full_group_by`.
 
-- **[CRM-19478](https://issues.civicrm.org/jira/browse/CRM-19478) API not handling Paypal recurring IPN where p=null for Contribution Page ([10447](https://github.com/civicrm/civicrm-core/pull/10447))**
+- **[CRM-20867](https://issues.civicrm.org/jira/browse/CRM-20867) Class not
+  found ([10656](https://github.com/civicrm/civicrm-core/pull/10656))**
 
-- **[CRM-20495](https://issues.civicrm.org/jira/browse/CRM-20495) "Contribution amounts section" checkbox setting on contribution pages always shows as checked. ([10521](https://github.com/civicrm/civicrm-core/pull/10521))**
+  This fixes a fatal error in the additional payment form due to a typo in the
+  name of the `CRM_Contribute_BAO_Contribution` class.
 
-### CiviContribute, CiviMail
+- **[CRM-20649](https://issues.civicrm.org/jira/browse/CRM-20649) Notice error
+  when creating Price set
+  ([10431](https://github.com/civicrm/civicrm-core/pull/10431))**
 
-- **[CRM-20747](https://issues.civicrm.org/jira/browse/CRM-20747) {contribution.campaign} token not working on Contribution ThankYou letter ([10533](https://github.com/civicrm/civicrm-core/pull/10533))**
+  Validation of a price set name would generate a PHP notice if the name was
+  blank.
 
-### CiviMail, NYSS
+- **[CRM-20823](https://issues.civicrm.org/jira/browse/CRM-20823) Price Set
+  field with an Expiry Date still being 'required' after being expired.
+  ([10613](https://github.com/civicrm/civicrm-core/pull/10613))**
 
-- **[CRM-20412](https://issues.civicrm.org/jira/browse/CRM-20412) mailing report: unique opens detail view inaccurate ([10558](https://github.com/civicrm/civicrm-core/pull/10558))**
+- **[CRM-20752](https://issues.civicrm.org/jira/browse/CRM-20752) Editing a
+  Cancelled Pledge updates the status of it to Pending/Inprogress
+  ([10535](https://github.com/civicrm/civicrm-core/pull/10535))**
 
-- **[CRM-20411](https://issues.civicrm.org/jira/browse/CRM-20411) mailing tab listing: MySQL 5.7 group by error ([10562](https://github.com/civicrm/civicrm-core/pull/10562) and [10541](https://github.com/civicrm/civicrm-core/pull/10541))**
+- **[CRM-20812](https://issues.civicrm.org/jira/browse/CRM-20812) Notice on live
+  contribution when only pay later is selected
+  ([10606](https://github.com/civicrm/civicrm-core/pull/10606))**
 
-### CiviCRM API, CiviEvent
+- **[CRM-20761](https://issues.civicrm.org/jira/browse/CRM-20761) Formrule error
+  when priceset is selected on contribution page
+  ([10549](https://github.com/civicrm/civicrm-core/pull/10549))**
 
-- **[CRM-20775](https://issues.civicrm.org/jira/browse/CRM-20775) Wrong is full results for API event get ([10568](https://github.com/civicrm/civicrm-core/pull/10568))**
+  When enabling a contribution amounts section and selecting a price set on a
+  contribution page's settings form, validation would fail, looking for a
+  contribution amount label.
+
+- **[CRM-20401](https://issues.civicrm.org/jira/browse/CRM-20401) Cancel/modify
+  URL receipt links not correct for Paypal Website Payments Pro
+  ([10424](https://github.com/civicrm/civicrm-core/pull/10424))**
+
+- **[CRM-20745](https://issues.civicrm.org/jira/browse/CRM-20745) Post date of
+  recur not respected in credit card pledge payment
+  ([10524](https://github.com/civicrm/civicrm-core/pull/10524))**
+
+- **[CRM-20773](https://issues.civicrm.org/jira/browse/CRM-20773) Contribution
+  tab shows Receive Date twice instead of Thank You date
+  ([10607](https://github.com/civicrm/civicrm-core/pull/10607))**
+
+- **[CRM-20387](https://issues.civicrm.org/jira/browse/CRM-20387) Sales Tax and
+  Invoicing code overwrites existing CiviCRM invoice ID
+  ([10298](https://github.com/civicrm/civicrm-core/pull/10298))**
+
+  A new `invoice_number` field is added to the `civicrm_contribution` table to
+  record the ID of the manually-generated invoice.
+
+- **[CRM-20488](https://issues.civicrm.org/jira/browse/CRM-20488) Lift
+  restrictions for contact type soft credit
+  ([10532](https://github.com/civicrm/civicrm-core/pull/10532) and
+  [10419](https://github.com/civicrm/civicrm-core/pull/10419))**
+
+  Users could not soft-credit an organization if the contribution originated
+  from a contribution page where honor/memory is enabled.
+
+- **[CRM-19478](https://issues.civicrm.org/jira/browse/CRM-19478) API not
+  handling Paypal recurring IPN where p=null for Contribution Page
+  ([10447](https://github.com/civicrm/civicrm-core/pull/10447))**
+
+- **[CRM-20495](https://issues.civicrm.org/jira/browse/CRM-20495) "Contribution
+  amounts section" checkbox setting on contribution pages always shows as
+  checked. ([10521](https://github.com/civicrm/civicrm-core/pull/10521))**
+
+- **[CRM-20747](https://issues.civicrm.org/jira/browse/CRM-20747)
+  {contribution.campaign} token not working on Contribution ThankYou letter
+  ([10533](https://github.com/civicrm/civicrm-core/pull/10533))**
 
 ### CiviMember
+
+- **[CRM-19017](https://issues.civicrm.org/jira/browse/CRM-19017) Scheduled
+  membership reminders have stopped working
+  ([10652](https://github.com/civicrm/civicrm-core/pull/10652))**
 
 - **[CRM-20716](https://issues.civicrm.org/jira/browse/CRM-20716) Array to
   string issue on php7 when creating membership activity
@@ -406,25 +446,51 @@ Released August 2, 2017;
 - **[CRM-18177](https://issues.civicrm.org/jira/browse/CRM-18177) When Renewing
   an existing membership, if CC details are incorrect, Membership is set to
   Cancelled preventing contact from trying again
-  ([10770](https://github.com/civicrm/civicrm-core/pull/10770)) (fix to problem introduced in original bug fix)**
+  ([10770](https://github.com/civicrm/civicrm-core/pull/10770)) (fix to problem
+  introduced in original bug fix)**
 
-- **[CRM-20567](https://issues.civicrm.org/jira/browse/CRM-20567) backoffice membership via price set errors with non-aggregated column ([10346](https://github.com/civicrm/civicrm-core/pull/10346))**
+- **[CRM-20850](https://issues.civicrm.org/jira/browse/CRM-20850) Replace fatal
+  with statusBounce in membership form
+  ([10638](https://github.com/civicrm/civicrm-core/pull/10638))**
 
-- **[CRM-20720](https://issues.civicrm.org/jira/browse/CRM-20720) CIVICRM-128 Unable to sort Price Options for Price Fieldset. Weight values are not being set at all in database. ([10542](https://github.com/civicrm/civicrm-core/pull/10542))**
+  When a user links to edit a linked contribution from a membership and they
+  don't have permission to edit the contribution, they should be redirected with
+  an error notice rather than being shown a fatal error.
 
-- **[CRM-20670](https://issues.civicrm.org/jira/browse/CRM-20670) Cannot edit membership type if lots of members already exist ([10534](https://github.com/civicrm/civicrm-core/pull/10534) and [10455](https://github.com/civicrm/civicrm-core/pull/10455))**
+- **[CRM-20667](https://issues.civicrm.org/jira/browse/CRM-20667) Additonal Line
+  item created from Membership backoffice form
+  ([10450](https://github.com/civicrm/civicrm-core/pull/10450))**
 
-### Dedupe, NYSS
+- **[CRM-20805](https://issues.civicrm.org/jira/browse/CRM-20805) Fatal Error
+  when adding new membership type on a contribution page.
+  ([10597](https://github.com/civicrm/civicrm-core/pull/10597))**
 
-- **[CRM-19653](https://issues.civicrm.org/jira/browse/CRM-19653) Custom field checkboxes migrated incorrectly on merge (part deux) ([10407](https://github.com/civicrm/civicrm-core/pull/10407))**
+- **[CRM-20668](https://issues.civicrm.org/jira/browse/CRM-20668) Notice error
+  ([10452](https://github.com/civicrm/civicrm-core/pull/10452))**
 
-### CiviCRM Search
+  This fixes a PHP notice when creating a membership using a price set on the
+  backend.
 
-- **[CRM-19821](https://issues.civicrm.org/jira/browse/CRM-19821) Remove performance degrading joins from activity search (& api calls) ([10274](https://github.com/civicrm/civicrm-core/pull/10274))**
+- **[CRM-20675](https://issues.civicrm.org/jira/browse/CRM-20675) Membership
+  status update creates renewal activity
+  ([10457](https://github.com/civicrm/civicrm-core/pull/10457))**
 
-### CiviContribute, CiviCRM API
+- **[CRM-20567](https://issues.civicrm.org/jira/browse/CRM-20567) backoffice
+  membership via price set errors with non-aggregated column
+  ([10346](https://github.com/civicrm/civicrm-core/pull/10346))**
 
-- **[CRM-20525](https://issues.civicrm.org/jira/browse/CRM-20525) Webform Pay later sends Receipt email rather than Invoice email ([10306](https://github.com/civicrm/civicrm-core/pull/10306))**
+  This is one of several errors that appear when `sql_mode` was set to
+  `only_full_group_by`.
+
+- **[CRM-20720](https://issues.civicrm.org/jira/browse/CRM-20720) CIVICRM-128
+  Unable to sort Price Options for Price Fieldset. Weight values are not being
+  set at all in database.
+  ([10542](https://github.com/civicrm/civicrm-core/pull/10542))**
+
+- **[CRM-20670](https://issues.civicrm.org/jira/browse/CRM-20670) Cannot edit
+  membership type if lots of members already exist
+  ([10534](https://github.com/civicrm/civicrm-core/pull/10534) and
+  [10455](https://github.com/civicrm/civicrm-core/pull/10455))**
 
 ### CiviEvent
 
@@ -432,7 +498,23 @@ Released August 2, 2017;
   message shown as error
   ([10515](https://github.com/civicrm/civicrm-core/pull/10515))**
 
-- **[CRM-19745](https://issues.civicrm.org/jira/browse/CRM-19745) Image URL field doesn't show up on CiviEvent Additional Participants Profile ([9777](https://github.com/civicrm/civicrm-core/pull/9777))**
+- **[CRM-20633](https://issues.civicrm.org/jira/browse/CRM-20633) custom field
+  set displayed twice on register event Participant
+  ([10551](https://github.com/civicrm/civicrm-core/pull/10551))**
+
+  When switching event types on the backend form to add an event participant,
+  custom fields common to all event types would be added repeatedly.
+
+- **[CRM-20775](https://issues.civicrm.org/jira/browse/CRM-20775) Wrong is full
+  results for API event get
+  ([10568](https://github.com/civicrm/civicrm-core/pull/10568))**
+
+  When Max Number of Participants event field is left empty, the API would
+  return `1` for the `is_full`property instead of `0`.
+
+- **[CRM-19745](https://issues.civicrm.org/jira/browse/CRM-19745) Image URL
+  field doesn't show up on CiviEvent Additional Participants Profile
+  ([9777](https://github.com/civicrm/civicrm-core/pull/9777))**
 
 ### CiviMail
 
@@ -447,17 +529,61 @@ Released August 2, 2017;
   error on Mailing Opened Report
   ([10690](https://github.com/civicrm/civicrm-core/pull/10690))**
 
-- **[CRM-20713](https://issues.civicrm.org/jira/browse/CRM-20713) db error when populating mailing recipients because sms_provider_id is 'null' ([10487](https://github.com/civicrm/civicrm-core/pull/10487))**
+- **[CRM-20746](https://issues.civicrm.org/jira/browse/CRM-20746) CiviMail -
+  text part of resubscribe confirmation mail contains html
+  ([10528](https://github.com/civicrm/civicrm-core/pull/10528))**
 
-### Core CiviCRM, NYSS
+- **[CRM-20412](https://issues.civicrm.org/jira/browse/CRM-20412) mailing
+  report: unique opens detail view inaccurate
+  ([10558](https://github.com/civicrm/civicrm-core/pull/10558))**
 
-- **[CRM-20743](https://issues.civicrm.org/jira/browse/CRM-20743) users without reserved tag permission may still modify the tag ([10522](https://github.com/civicrm/civicrm-core/pull/10522))**
+- **[CRM-20411](https://issues.civicrm.org/jira/browse/CRM-20411) mailing tab
+  listing: MySQL 5.7 group by error
+  ([10562](https://github.com/civicrm/civicrm-core/pull/10562) and
+  [10541](https://github.com/civicrm/civicrm-core/pull/10541))**  
 
-- **[CRM-20621](https://issues.civicrm.org/jira/browse/CRM-20621) manage tags: the tag usage count is not accurate ([10441](https://github.com/civicrm/civicrm-core/pull/10441))**
+- **[CRM-20713](https://issues.civicrm.org/jira/browse/CRM-20713) db error when
+  populating mailing recipients because sms_provider_id is 'null'
+  ([10487](https://github.com/civicrm/civicrm-core/pull/10487))**
 
-### Drupal Integration Modules
+### Backdrop Integration
 
-- **[CRM-19976](https://issues.civicrm.org/jira/browse/CRM-19976) Drush: cannot disable civicrm debug ([457](https://github.com/civicrm/civicrm-drupal/pull/457))**
+- **Fix spelling to canvass for civicrm_engage
+  ([40](https://github.com/civicrm/civicrm-backdrop/pull/40))**
+
+- **Bug fixes - issues #22, #31, #33
+  ([39](https://github.com/civicrm/civicrm-backdrop/pull/39))**
+
+- **Improve Views checkbox value handling
+  ([37](https://github.com/civicrm/civicrm-backdrop/pull/37))**
+
+- **add new views handlers to hook_autoload_info
+  ([38](https://github.com/civicrm/civicrm-backdrop/pull/38))**
+
+- **Merge in civicrm/drupal from Dec 15, 2015 to June 21, 2017
+  ([36](https://github.com/civicrm/civicrm-backdrop/pull/36))**
+
+### Drupal Integration
+
+- **[CRM-20525](https://issues.civicrm.org/jira/browse/CRM-20525) Webform Pay
+  later sends Receipt email rather than Invoice email
+  ([10306](https://github.com/civicrm/civicrm-core/pull/10306))**
+
+- **[CRM-19976](https://issues.civicrm.org/jira/browse/CRM-19976) Drush: cannot
+  disable civicrm debug
+  ([457](https://github.com/civicrm/civicrm-drupal/pull/457))**
+
+  While `drush civicrm-enable-debug` was defined, this adds the
+  `civicrm-disable-debug` command.
+
+### Joomla Integration
+
+- **[CRM-19914](https://issues.civicrm.org/jira/browse/CRM-19914)
+  civicrmHooks.php issues on windows
+  ([10571](https://github.com/civicrm/civicrm-core/pull/10571))**
+
+  This resolves problems locating the `civicrmHooks.php` file on Joomla sites in
+  Windows.
 
 ## <a name="misc"></a>Miscellany
 
@@ -486,6 +612,29 @@ Released August 2, 2017;
   [10625](https://github.com/civicrm/civicrm-core/pull/10625))**
 
   The namespace is now `Civi\Api4\Entity` rather than `Civi\Api4`.
+
+- **[CRM-19726](https://issues.civicrm.org/jira/browse/CRM-19726)
+  `CiviMailUtils::clearMessages()` should clear all messages by default
+  ([10669](https://github.com/civicrm/civicrm-core/pull/10669))**
+
+- **Misspelling ([10619](https://github.com/civicrm/civicrm-core/pull/10619))**
+
+- **[CRM-20797](https://issues.civicrm.org/jira/browse/CRM-20797) Use is_payment
+  to retrieve payments
+  ([10587](https://github.com/civicrm/civicrm-core/pull/10587))**
+
+- **Replace a couple of calls to deprecated function
+  ([10527](https://github.com/civicrm/civicrm-core/pull/10527))**
+
+- **[CRM-20758](https://issues.civicrm.org/jira/browse/CRM-20758) Fix deprecated
+  fn call on import screen
+  ([10544](https://github.com/civicrm/civicrm-core/pull/10544))**
+
+- **[CRM-20541](https://issues.civicrm.org/jira/browse/CRM-20541) Edge case
+  where DB connection is not available
+  ([447](https://github.com/civicrm/civicrm-drupal/pull/447))**
+
+  Certain static variables now use Drupal's built-in system.
 
 ## <a name="credits"></a>Credits
 
