--- a/release-notes/4.7.23.md
+++ b/release-notes/4.7.23.md
@@ -640,9 +640,30 @@ Released August 2, 2017
 
 This release was developed by the following code authors:
 
-AGH Strategies - Andrew Hunt; AronNovakInovae; Arun Singh; Australian Greens - Seamus Lee; Circle Interactive - Dave Jenkins; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Yashodha Chaku; CompuCorp - Michael Devery; Coop SymbioTIC - Mathieu Lutfy; Dave Greenberg; Electronic Frontier Foundation - Mark Burdett; Francesc Bassas i Bullich; Freeform Solutions - Herb van den Dool; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit; JMA Consulting - Edsel Lopez, Monish Deb, Pradeep Nayak; JO0st; John Kingsnorth; Joinery - Allen Shaw; Klaas Eikelboom; laryn; Lighthouse Design and Consulting - Brian Shaughnessy; Mattias Michaux; MegaphoneJon; mepps; MJW Consulting - Matthew Wire; Oxfam Germany - Thomas Schüttler; Progressive Technology Project - Jamie McClelland; spencerbrooks; Squiffle Consulting - Aidan Saunders; Wikimedia Foundation - Eileen McNaughton
+AGH Strategies - Andrew Hunt; Arun Singh; Australian Greens - Seamus Lee; Brooks
+Digital - Spencer Brooks; CEDC - Laryn Kragt Bakker; Circle Interactive - Dave
+Jenkins; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Yashodha Chaku;
+CompuCorp - Michael Devery; Coop SymbioTIC - Mathieu Lutfy; Dave Greenberg;
+Electronic Frontier Foundation - Mark Burdett; Francesc Bassas i Bullich;
+Freeform Solutions - Herb van den Dool; Fuzion - Chris Burgess, Eileen
+McNaughton, Jitendra Purohit; Gizra - Aron Novak; JMA Consulting - Edsel Lopez,
+Monish Deb, Pradeep Nayak; John Kingsnorth; Joinery - Allen Shaw; Joost Fock;
+Klaas Eikelboom; Lighthouse Design and Consulting - Brian Shaughnessy; Mattias
+Michaux; Megaphone Technology Consulting - Jon Goldberg; MJW Consulting -
+Matthew Wire; Oxfam Germany - Thomas Schüttler; Progressive Technology Project -
+Jamie McClelland; Squiffle Consulting - Aidan Saunders; Wikimedia Foundation -
+Eileen McNaughton, Maggie Epps
 
 Most authors also reviewed code for this release; in addition, the following
 reviewers contributed their comments:
 
-AGH Strategies - Andrew Hunt; Agileware - Agileware Team; andrimont; Arkadiusz Rzadkowolski; Australian Greens - Seamus Lee; Blackfly Solutions - Alan Dixon; Circle Interactive - Dave Jenkins; civicrm-builder; CiviCRM - Coleman Watts, Tim Otten; CiviDesk - Nicolas Ganivet, Yashodha Chaku; CompuCorp - Guanhuan Chen, Jamie Novick, Michael Devery, Mirela Stanila; Coop SymbioTIC - Mathieu Lutfy; Davi Alexandre; DevMate - Adam Kwiatkowski; diegov; dinalondon; Donald Hirst; ejegg; Electronic Frontier Foundation - Mark Burdett; Francesc Bassas i Bullich; Freeform Solutions - Herb van den Dool; Fuzion - Chris Burgess, Eileen McNaughton, Jitendra Purohit, Peter Davis; JMA Consulting - Edsel Lopez, Joe Murray, Monish Deb, Pradeep Nayak; JO0st; Johan Vervloet; John Kingsnorth; Joinery - Allen Shaw; Jon Goldberg; Klaas Eikelboom; Korlon - Stuart Gaston; Lighthouse Design and Consulting - Brian Shaughnessy; lpkb; MC3 - Graham Mitchell; mdlueck; MegaphoneJon; mepps; MJW Consulting - Matthew Wire; Nathan Brettell; Oxfam Germany - Thomas Schüttler; peter39; philmck; Progressive Technology Project - Jamie McClelland; Semper IT - Karin Gerritsen; Skvare - Mark Hanna; Squiffle Consulting - Aidan Saunders; Stephen Palmstrom; Tadpole Collective - Kevin Cristiano; torrance123; Upleaf - Osvaldo Gomez; Wikimedia Foundation - Eileen McNaughton
+Agileware - Agileware Team; Arkadiusz Rzadkowolski; Blackfly Solutions - Alan
+Dixon; CiviDesk - Nicolas Ganivet; CompuCorp - Davi Alexandre, Guanhuan Chen,
+Jamie Novick, Mirela Stanila; DevMate - Adam Kwiatkowski; Donald Hirst; DotPro -
+Diego Viegas; F. M. Andrimont; Fuzion - Peter Davis, Torrance Hodgson; JMA
+Consulting - Joe Murray, Pradeep Nayak; Johan Vervloet; Jvillage Network - Dina
+London; Korlon - Stuart Gaston; Lueck Data Systems - Michael Lueck; MC3 - Graham
+Mitchell; Nathan Brettell; Oxfam Germany - Thomas Schüttler; Peter Bull; Phil
+McKerracher; Semper IT - Karin Gerritsen; Skvare - Mark Hanna; Stephen
+Palmstrom; Tadpole Collective - Kevin Cristiano; Upleaf - Osvaldo Gomez;
+Wikimedia Foundation - Elliott Eggleston
