Update 4.7.23.md - Capitalization

--- a/release-notes/4.7.23.md
+++ b/release-notes/4.7.23.md
@@ -9,13 +9,13 @@ Released August 2, 2017
 
 | Does this version                                               |         |
 |:--------------------------------------------------------------- |:-------:|
-| fix security vulnerabilities?                                   | no      |
-| **change the database schema?**                                 | **yes** |
-| **alter the API?**                                              | **yes** |
-| **require attention to configuration options?**                 | **yes** |
-| **fix problems installing or upgrading to a previous version?** | **yes** |
-| **introduce features?**                                         | **yes** |
-| **fix bugs?**                                                   | **yes** |
+| Fix security vulnerabilities?                                   | no      |
+| **Change the database schema?**                                 | **yes** |
+| **Alter the API?**                                              | **yes** |
+| **Require attention to configuration options?**                 | **yes** |
+| **Fix problems installing or upgrading to a previous version?** | **yes** |
+| **Introduce features?**                                         | **yes** |
+| **Fix bugs?**                                                   | **yes** |
 
 ## <a name="features"></a>Features
 
