--- a/release-notes/4.7.23.md
+++ b/release-notes/4.7.23.md
@@ -11,7 +11,7 @@ Released August 2, 2017
 
 ## <a name="synopsis"></a>Synopsis
 
-| Does this version...?                                           |         |
+| *Does this version...?*                                           |         |
 |:--------------------------------------------------------------- |:-------:|
 | Fix security vulnerabilities?                                   | no      |
 | **Change the database schema?**                                 | **yes** |
